--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <th>total</th>
       <th>cateagory</th>
       <th>updade</th>
-      <th>delete</th>
+      <th> delate </th>
   </tr>
   </thead>
 
